spotify-dashboard/03_deployment_mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-mongo
  namespace: spotify-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spotify-mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: spotify-mongo
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4.8
          volumeMounts:
            - mountPath: /data/db
              name: db-volume
          ports:
            - containerPort: 27017
      restartPolicy: Always
      volumes:
      - name: db-volume
        hostPath:
          path: /opt/spotify-dashboard/db
          type: Directory
