spotify-dashboard/05_deployment_spotify.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-dashboard
  namespace: spotify-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spotify-dashboard
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: spotify-dashboard
    spec:
      containers:
        - name: spotify-dashboard
          image: lscr.io/linuxserver/your_spotify:latest
          ports:
            - containerPort: 80
      restartPolicy: Always
