spotify-dashboard/04_service_mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: spotify-mongo
  namespace: spotify-dashboard
spec:
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  type: NodePort
  selector:
    app: spotify-mongo
