spotify-dashboard/06_service_spotify.yaml
apiVersion: v1
kind: Service
metadata:
  name: spotify-dashboard
  namespace: spotify-dashboard
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: spotify-dashboard
